Removed Copy righted material

--- a/Blue Template/results.html
+++ b/Blue Template/results.html
@@ -7,14 +7,14 @@
   
   <!--Add CSS Here-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <!--Start Nav Bar-->
   <nav class="light-blue darken-2" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><img height="100px;" src="images/logo.jpg" alt="Unsplashed logo image"></a>
+      <a id="logo-container" href="index.html" class="brand-logo"><img height="100px;" src="" alt="Logo image"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -47,7 +47,7 @@
         <div class="col s12 m4">
           <div class="card hoverable">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="http://previews.123rf.com/images/indomercy/indomercy1502/indomercy150200001/36210242-woman-fitness-before-after-Stock-Vector.jpg">
+            <img class="activator" src="" alt="Before and After">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4 center">Madison R.<i class="material-icons right">more_vert</i></span>
@@ -63,7 +63,7 @@
         <div class="col s12 m4">
          <div class="card hoverable">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http://previews.123rf.com/images/indomercy/indomercy1502/indomercy150200004/36210245-man-fitness-before-after-Stock-Vector.jpg">
+            <img class="activator" src="" alt="Before and After">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4 center">David Y.<i class="material-icons right">more_vert</i></span>
@@ -79,7 +79,7 @@
       <div class="col s12 m4">
         <div class="card hoverable">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http://previews.123rf.com/images/indomercy/indomercy1502/indomercy150200001/36210242-woman-fitness-before-after-Stock-Vector.jpg">
+            <img class="activator" src="" alt="Before and After">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4 center">Sarah O.<i class="material-icons right">more_vert</i></span>
@@ -97,7 +97,7 @@
       <div class="col s12 m4">
         <div class="card hoverable">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http://previews.123rf.com/images/indomercy/indomercy1502/indomercy150200001/36210242-woman-fitness-before-after-Stock-Vector.jpg">
+            <img class="activator" src="" alt="Before and After">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4 center">Kate L.<i class="material-icons right">more_vert</i></span>
@@ -113,7 +113,7 @@
       <div class="col s12 m4">
         <div class="card hoverable">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="http://previews.123rf.com/images/indomercy/indomercy1502/indomercy150200001/36210242-woman-fitness-before-after-Stock-Vector.jpg">
+            <img class="activator" src="" alt="Before and After">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4 center">Sally I.<i class="material-icons right">more_vert</i></span>
@@ -129,7 +129,7 @@
       <div class="col s12 m4">
        <div class="card hoverable">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="http://previews.123rf.com/images/indomercy/indomercy1502/indomercy150200004/36210245-man-fitness-before-after-Stock-Vector.jpg">
+          <img class="activator" src="" alt="Before and After">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4 center">Mike R.<i class="material-icons right">more_vert</i></span>
@@ -190,7 +190,7 @@
 
 <!--Add Scripts Here-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/materialize.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 <script src="js/init.js"></script>
 
 </body>
