--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!--Add CSS Here-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -45,7 +45,7 @@
     <div class="col s12 m4">
      <div class="card small hoverable">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="Crossfit Athletic - Home Page - default.png">
+        <img class="activator" src="Crossfit Athletic - Home Page - Default.png">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4 center"><a href="Default Template/index.html" class="btn-large waves-effect waves-light ">Crossfit Athletic Default</a></span>
@@ -61,7 +61,7 @@
 
 <!--Add Scripts Here-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/materialize.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 <script src="js/init.js"></script>
 
 </body>
