--- a/Blue Template/index.html
+++ b/Blue Template/index.html
@@ -7,14 +7,14 @@
   
   <!--Add CSS Here-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <!--Start Nav Bar-->
   <nav class="light-blue darken-2" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><img src="images/logo.jpg" alt="Unsplashed logo image"></a>
+      <a id="logo-container" href="index.html" class="brand-logo"><img src="" alt="Logo image"></a>
       <ul class="right hide-on-med-and-down">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -51,7 +51,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="images/crossfit_background1.jpg" alt="Unsplashed fitness img 1"></div>
+    <div class="parallax"><img src="" alt="Unsplashed fitness img 1"></div>
   </div>
   <!--End First Parallax-->
 
@@ -61,7 +61,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"><img src="images/kettleBell.jpg" alt="Unsplashed fitness img 1"></h2>
+            <h2 class="center"><img src="images/kettleBell.jpg" alt="Fitness Icon 1"></h2>
             <h5 class="center">Beginner WODs</h5>
             <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium sapien eget erat ultricies, et dictum quam interdum. Nulla eget quam dolor. Nunc vitae urna et risus placerat pretium. In hac habitasse platea dictumst. In eu porta metus. Suspendisse potenti. Fusce pulvinar commodo libero non dictum. Nullam non sem sapien. Nullam non mattis orci, et ultricies ipsum.</p>
           </div>
@@ -69,7 +69,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"><img src="images/rope.jpg" alt="Unsplashed fitness img 1"></h2>
+            <h2 class="center"><img src="images/rope.jpg" alt="Fitness Icon 2"></h2>
             <h5 class="center">Traveling WODs</h5>
 
             <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ornare quis lacus tristique maximus. Quisque blandit nulla quis porta tempus. Aenean blandit, dolor non congue ullamcorper, est quam varius enim, ac tempor erat arcu sed risus. Pellentesque augue elit, porta eu pulvinar sit amet, feugiat tempus sapien. Morbi imperdiet urna ut elementum gravida. Etiam at orci sit amet ligula volutpat condimentum. Proin semper tortor in mi sagittis euismod. Donec commodo ullamcorper eros, vitae imperdiet leo rhoncus nec.</p>
@@ -78,7 +78,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"><img src="images/skull.jpg" alt="Unsplashed fitness img 1"></h2>
+            <h2 class="center"><img src="images/skull.jpg" alt="Fitness Icon 3"></h2>
             <h5 class="center">Brutal WODs</h5>
             <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut aliquet nulla. Praesent at porta augue, id iaculis purus. Nullam id sagittis nisl. Proin imperdiet tincidunt elit in sodales. Nam viverra euismod odio eu cursus. Fusce sem nisl, tempor et mi vitae, semper convallis eros. Phasellus a pretium nisi.</p>
           </div>
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/crossfit_background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="" alt="Unsplashed background img 2"></div>
   </div>
   <!--End Second Parallax-->
 
@@ -161,7 +161,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/crossfit_background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="" alt="Unsplashed background img 3"></div>
   </div>
   <!--End Thrid Parallax-->
 
@@ -208,7 +208,7 @@
 
   <!--Add Scripts Here-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
   <script src="js/init.js"></script>
 
 </body>
