--- a/Green Template/about.html
+++ b/Green Template/about.html
@@ -7,14 +7,14 @@
 
   <!--Add CSS Here-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <!--Start Nav Bar-->
   <nav class="light-green lighten-1" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="index.html" class="brand-logo"><img height="100px;" src="images/logo.jpg" alt="Unsplashed logo image"></a>
+      <a id="logo-container" href="index.html" class="brand-logo"><img height="100px;" src="" alt="Logo image"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li class="active"><a href="about.html">About</a></li>
@@ -43,7 +43,7 @@
         <div class="col s12 m4">
          <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/crossfit_background2.jpg">
+            <img class="activator" src="">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4 center">Our Mission Statment<i class="material-icons right">more_vert</i></span>
@@ -116,7 +116,7 @@
 
 <!--Add Scripts Here-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="js/materialize.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 <script src="js/init.js"></script>
 
 </body>
